--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gadkod",
   "version": "0.0.1",
-  "description": "Check inside your files for problematic unicode characters in code (like greek question mark…)",
+  "description": "Check inside your files for suspicious unicode characters in code (like greek question mark…)",
   "keywords": [
     "code",
     "guard",
@@ -31,10 +31,27 @@
       "url": "https://github.com/leny/gadkod/blob/master/LICENSE-MIT"
     }
   ],
+  "main": "lib/gadkod",
   "bin": {
     "gadkod": "lib/cli.js"
   },
   "engines": {
     "node": ">= 0.12.0"
+  },
+  "dependencies": {
+    "chalk": "^1.1.1",
+    "commander": "^2.9.0",
+    "glob": "^5.0.15",
+    "lodash": "^3.10.1"
+  },
+  "devDependencies": {
+    "coffeelint": "^1.13.0",
+    "grunt": "^0.4.5",
+    "grunt-clear": "^0.2.1",
+    "grunt-coffeelint": "0.0.13",
+    "grunt-contrib-coffee": "^0.13.0",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "matchdep": "^1.0.0"
   }
 }
