--- a/package.json
+++ b/package.json
@@ -41,17 +41,16 @@
   "dependencies": {
     "chalk": "^1.1.1",
     "commander": "^2.9.0",
-    "glob": "^5.0.15",
-    "lodash": "^3.10.1"
+    "glob": "^6.0.4",
+    "lodash": "^4.0.0"
   },
   "devDependencies": {
-    "coffeelint": "^1.13.0",
+    "babel-preset-es2015": "^6.3.13",
     "grunt": "^0.4.5",
-    "grunt-clear": "^0.2.1",
-    "grunt-coffeelint": "0.0.13",
-    "grunt-contrib-coffee": "^0.13.0",
+    "grunt-babel": "^6.0.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
-    "matchdep": "^1.0.0"
+    "grunt-eslint": "^17.3.1",
+    "load-grunt-tasks": "^3.4.0"
   }
 }
